# fn2ptr

./: .gitignore  CMakeLists.txt  LICENSE
include/: asm.h  fn2ptr.h  fn_factory.h  fnptr_proxy.h  lambda_proxy.h  mempage.h
src/posix/: mempage.cpp
src/posix/x86_64/: asm.cpp
src/win/: mempage.cpp
src/win/AMD64/: asm.cpp
tests/: test.cpp
